fixed some alignments from responsiveness

--- a/src/components/clients/client.css
+++ b/src/components/clients/client.css
@@ -53,14 +53,14 @@ img {
 @media only screen and (max-width: 600px) {
   .heading {
     font-weight: 600;
-    font-size: 20px;
+    font-size: 25px;
     color: #3a3a3a;
     text-shadow: 2px 3px 4px var(--mintext-bg);
     word-spacing: 4px;
   }
   .subtext {
     font-weight: 300;
-    margin-top: 10px;
+    margin-top: 12px;
     color: var(--mintext-bg);
     text-shadow: 2px 3px 5px #717171;
     font-size: 10px;
