--- a/src/containers/community/community.css
+++ b/src/containers/community/community.css
@@ -55,14 +55,14 @@
     margin-top: 30px;
   }
   .community-heading {
-    font-size: 20px;
+    font-size: 25px;
   }
   .middletext {
-    font-size: 15px;
+    font-size: 25px;
     margin-bottom: 10px;
   }
   .community-subtext {
-    font-size: 10px;
+    font-size: 12px;
     margin-bottom: 10px;
   }
   .boxes {
