--- a/src/containers/customers/customers.css
+++ b/src/containers/customers/customers.css
@@ -70,6 +70,7 @@
         flex-direction: column;
         align-items: center;
         width: auto;
+        height: auto;
     }
     .customers-left img{
         width: auto;
