--- a/src/containers/helping/helping.css
+++ b/src/containers/helping/helping.css
@@ -39,6 +39,7 @@
     width: auto;
     padding-top: 15px;
     padding-bottom: 15px;
+    height: auto;
   }
   .helping-left-heading {
     font-size: 20px;
