--- a/src/containers/pixelgrade/pixel.css
+++ b/src/containers/pixelgrade/pixel.css
@@ -82,7 +82,7 @@
     margin-top: 40px;
   }
   .pixel-heading{
-    font-size: 20px;
+    font-size: 23px;
     line-height: 20px;
   }
   .pixel-text{
